--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -54,10 +54,10 @@ jobs:
     - name: ssh scp ssh pipelines
       uses: cross-the-world/ssh-scp-ssh-pipelines@latest
       with:
-        host: ${{NCP_HOST}}
-        user: ${{NCP_USERNAME}}
-        pass: ${{NCP_PASS}}
-        port: ${{NCP_PORT}}
+        host: ${{secrets.NCP_HOST}}
+        user: ${{secrets.NCP_USERNAME}}
+        pass: ${{secrets.NCP_PASS}}
+        port: ${{secrets.NCP_PORT}}
         connect_timeout: 10s
         scp: |
           './deploy/*' => /root/
