--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -53,13 +53,20 @@ jobs:
     # ssh 서버 접속
     - name: ssh scp ssh pipelines
       uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+      env:
+        FIRST_INFO: "success connect naver cloud"
+        LAST_INFO: "success scp naver cloud"
       with:
         host: ${{secrets.NCP_HOST}}
         user: ${{secrets.NCP_USERNAME}}
         pass: ${{secrets.NCP_PASS}}
         port: ${{secrets.NCP_PORT}}
         connect_timeout: 10s
+        first_ssh: |
+          ls -la \necho $FIRST_INFO
         scp: |
-          './deploy/*' => /root/
+          './deploy/*' => ./
+        last_ssh: |
+          echo $LAST_INFO || ls -la
       
     
