--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -63,7 +63,7 @@ jobs:
         port: ${{secrets.NCP_PORT}}
         connect_timeout: 10s
         first_ssh: |
-          ls -la \necho $FIRST_INFO
+          ls -la || echo $FIRST_INFO
         scp: |
           './deploy/*' => ./
         last_ssh: |
