--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -60,8 +60,7 @@ jobs:
         connect_timeout: 30s
         first_ssh: |
           ls -la || echo $FIRST_INFO
-        scp: |
-          ./deploy/*.jar => ./
+        scp: ./build/libs/*.jar => ./
         last_ssh: |
           echo $LAST_INFO || ls -la
       
