--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -60,8 +60,8 @@ jobs:
         connect_timeout: 30s
         first_ssh: |
           ls -la || echo $FIRST_INFO
-        scp: ./build/libs/*.jar => ./
+        scp: ./build/libs/*.jar => ./deploy/
         last_ssh: |
-          echo $LAST_INFO || ls -la
+          ls -la || echo $LAST_INFO 
       
     
