--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -55,7 +55,7 @@ jobs:
         tar -cvf deploy.tar ../build/
       
     - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@v0.1.8
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.NCP_HOST }}
         username: ${{ secrets.NCP_USERNAME }}
