--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -38,21 +38,21 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build
       
-#      # 디렉토리 생성
-#     - name: Make Directory
-#       run: mkdir -p deploy
+     # 디렉토리 생성
+    - name: Make Directory
+      run: mkdir -p deploy
 
 #     - run: cd ./build && ls -al
         
-#     # Jar 파일 복사
-#     - name: Copy Jar
-#       run: cp ./build/libs/*.jar ./deploy
+    # Jar 파일 복사
+    - name: Copy Jar
+      run: cp ./build/libs/*.jar ./deploy
 
-    - name: Run a multi-line script
-      run: |
-        mkdir ../build
-        cp ./build/libs/*.jar ../build
-        tar -cvf deploy.tar ../build/
+#     - name: Run a multi-line script
+#       run: |
+#         mkdir ../build
+#         cp ./build/libs/*.jar ../build
+#         tar -cvf deploy.tar ../build/
       
     - name: executing remote ssh commands using password
       uses: appleboy/scp-action@master
@@ -61,7 +61,7 @@ jobs:
         username: ${{ secrets.NCP_USERNAME }}
         password: ${{ secrets.NCP_PASS }}
         port: ${{ secrets.NCP_PORT }}
-        source: deploy.tar
+        source: ./deploy/*.jar
         target: /
       
 #     - run: apt-get install sshpass
